--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "description": "Uma extensão para visualizar os horários de aula no SIGAA da minha faculdade",
     "permissions": [
         "activeTab",
-        "storage"
+        "storage",
+        "scripting"
     ],
     "browser_action": {
         "default_icon": {
